add library convention plugin, refactor libs (including ones that can be further simplified with compose convention plugin)

--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,20 +1,12 @@
 plugins {
-    alias(libs.plugins.android.library)
-    alias(libs.plugins.kotlin.android)
-    alias(libs.plugins.kotlin.kapt)
+    id 'onhand.android.library'
     alias(libs.plugins.kotlin.serialization)
 }
 
 android {
     namespace 'com.tstreet.onhand.core.data'
 
-    // TODO: move everything below in android { } to separate build module for less redunancy
-    compileSdk 33
-
     defaultConfig {
-        minSdk 23
-        targetSdk 33
-
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -30,13 +22,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
