--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -1,25 +1,14 @@
 plugins {
-    alias(libs.plugins.android.library)
-    alias(libs.plugins.kotlin.android)
-    alias(libs.plugins.kotlin.kapt)
+    id 'onhand.android.library'
     alias(libs.plugins.kotlin.serialization)
     alias(libs.plugins.ksp)
 }
 
 android {
     namespace 'com.tstreet.onhand.core.database'
-    // TODO: move everything below in android { } to separate build module for less redundancy
-    compileSdk 33
 
     defaultConfig {
-        minSdk 23
-        targetSdk 33
-
         consumerProguardFiles "consumer-rules.pro"
-
-        // TO get around this error:
-        // Schema export directory is not provided to the annotation processor so we cannot export
-        // the schema.
         ksp {
             arg("room.schemaLocation", "$projectDir/schemas")
         }
@@ -37,13 +26,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
