add custom lib plugin to feature modules, consolidate kotlin and sdk version logic

--- a/feature/shoppinglist/build.gradle
+++ b/feature/shoppinglist/build.gradle
@@ -1,15 +1,12 @@
 plugins {
     id 'onhand.android.feature'
+    id 'onhand.android.library'
 }
 
 android {
     namespace 'com.tstreet.onhand.feature.shoppinglist'
-    compileSdk 33
 
     defaultConfig {
-        minSdk 23
-        targetSdk 33
-
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -26,20 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-        // For DaggerViewModel error:
-        // Inheritance from an interface with '@JvmDefault' members is only allowed with
-        // -Xjvm-default option
-        freeCompilerArgs = ["-Xjvm-default=all"]
-    }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.0'
     }
