add compose library convention plugin, integrate with modules using compose

--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -21,9 +21,13 @@ gradlePlugin {
             id = "onhand.android.feature"
             implementationClass = "AndroidFeatureConventionPlugin"
         }
-        register("androidLibrary") {
+        androidLibrary {
             id = "onhand.android.library"
             implementationClass = "AndroidLibraryConventionPlugin"
+        }
+        androidLibraryCompose {
+            id = "onhand.android.library.compose"
+            implementationClass = "AndroidLibraryComposeConventionPlugin"
         }
     }
 }
