--- a/feature/recipedetail/build.gradle
+++ b/feature/recipedetail/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'onhand.android.feature'
-    id 'onhand.android.library'
+    id 'onhand.android.library.compose'
 }
 
 android {
@@ -22,18 +22,5 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    buildFeatures {
-        compose true
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.4.0'
     }
 }
