--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,11 @@ androidGradlePlugin = "7.3.1"
 androidxCore = "1.9.0"
 androidxActivity = "1.6.1"
 androidxAppCompat = "1.5.1"
+androidxComposeBom = "2022.12.00"
+# Be sure this maps appropriately to the kotlin version as well
+# More info: https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+# e.g.: kotlin = "1.8.0", androidxComposeCompiler = "1.4.1" should work
+androidxComposeCompiler = "1.4.1"
 androidxComposeMaterial3 = "1.0.1"
 androidxComposeUi = "1.3.3"
 androidxComposeMaterial = "1.3.1"
@@ -35,6 +40,8 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "androidxComposeUi" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "androidxComposeUi" }
 androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "androidxComposeMaterial" }
+# For more information: https://developer.android.com/jetpack/compose/bom
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigationCompose" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "androidxComposeUi" }
 androidx-lifecycle-viewModelCompose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
