baseline changed minus figuring out how to provide DaggerDataComponent to app module

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':feature:shoppinglist'
 include ':feature:recipesearch'
 include ':feature:recipedetail'
 include ':feature:savedrecipes'
+include ':core:data:api'
+include ':core:data:impl'
