--- a/core/data/impl/build.gradle
+++ b/core/data/impl/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'onhand.android.library'
+    alias(libs.plugins.kotlin.serialization)
 }
 
 android {
-    namespace 'com.tstreet.onhand.core.domain'
+    namespace 'com.tstreet.onhand.core.data.impl'
 
     defaultConfig {
         consumerProguardFiles "consumer-rules.pro"
@@ -25,17 +26,23 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':core:data:api')
-    implementation project(path: ':core:network')
+    api project(path: ':core:data:api')
     implementation project(path: ':core:model')
+    implementation project(path: ':core:network')
+    implementation project(path: ':core:database')
     implementation project(path: ':core:common')
 
+    implementation libs.androidx.navigation.compose
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.kotlinx.serialization.json
+    implementation libs.retrofit.kotlin.serialization
     implementation libs.dagger
     kapt libs.dagger.compiler
-    
+
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
 }
+
+println 'Executing core/data/impl build.gradle - configuration phase'
