--- a/core/data/impl/build.gradle
+++ b/core/data/impl/build.gradle
@@ -28,21 +28,16 @@ android {
 dependencies {
     api project(path: ':core:data:api')
     implementation project(path: ':core:model')
+    implementation project(path: ':core:common')
     implementation project(path: ':core:network')
     implementation project(path: ':core:database')
-    implementation project(path: ':core:common')
 
-    implementation libs.androidx.navigation.compose
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
+    implementation libs.kotlinx.coroutines.android
     implementation libs.kotlinx.serialization.json
-    implementation libs.retrofit.kotlin.serialization
     implementation libs.dagger
     kapt libs.dagger.compiler
 
     testImplementation libs.junit4
-    androidTestImplementation libs.androidx.test.ext
-    androidTestImplementation libs.androidx.test.espresso.core
 }
 
 println 'Executing core/data/impl build.gradle - configuration phase'
