handle different networkn error types without crashing - still need to properly propogate error to UI

--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     implementation project(path: ':core:model')
+    implementation project(path: ':core:common')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
