--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,9 +35,9 @@ jobs:
 
       - name: Build all build type and flavor permutations
         run: ./gradlew assemble
-
-      - name: Run local tests
-        run: ./gradlew testDebug testMockDebug
+# TODO: uncomment once we have unit tests written
+#      - name: Run local tests
+#        run: ./gradlew testDebug testMockDebug
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v3
@@ -51,41 +51,41 @@ jobs:
         with:
           name: build-reports
           path: app/build/reports
-
-  androidTest:
-    needs: build
-    runs-on: macOS-latest # enables hardware acceleration in the virtual machine
-    timeout-minutes: 55
-    strategy:
-      matrix:
-        api-level: [24, 30] # From AndroidSdkVersions.kt
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: 11
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Run instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          arch: x86_64
-          disable-animations: true
-          disk-size: 6000M
-          heap-size: 600M
-          script: ./gradlew connectedDebugAndroidTest #-x :benchmark:connectedMockDebugBenchmarkAndroidTest
-
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-reports-${{ matrix.api-level }}
-          path: '*/build/reports/androidTests'
+# TODO: uncomment once instrumentation tests are setup
+#  androidTest:
+#    needs: build
+#    runs-on: macOS-latest # enables hardware acceleration in the virtual machine
+#    timeout-minutes: 55
+#    strategy:
+#      matrix:
+#        api-level: [24, 30] # From AndroidSdkVersions.kt
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'zulu'
+#          java-version: 11
+#
+#      - name: Setup Gradle
+#        uses: gradle/gradle-build-action@v2
+#
+#      - name: Run instrumentation tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: ${{ matrix.api-level }}
+#          arch: x86_64
+#          disable-animations: true
+#          disk-size: 6000M
+#          heap-size: 600M
+#          script: ./gradlew connectedDebugAndroidTest #-x :benchmark:connectedMockDebugBenchmarkAndroidTest
+#
+#      - name: Upload test reports
+#        if: always()
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: test-reports-${{ matrix.api-level }}
+#          path: '*/build/reports/androidTests'
