loading images in shopping list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation libs.androidx.compose.ui
     implementation libs.androidx.compose.material3
     implementation libs.androidx.navigation.compose
+    implementation libs.coil.kt
     implementation libs.dagger
     kapt libs.dagger.compiler
 
