--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation libs.androidx.appcompat
     implementation libs.androidx.compose.ui
     implementation libs.androidx.compose.material3
+    implementation libs.coil.kt
+    implementation libs.coil.kt.compose
 
     testImplementation libs.junit4
 
