scaffolding - dagger components, use case, navigation to custom recipe screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(path: ':feature:recipedetail')
     implementation project(path: ':feature:shoppinglist')
     implementation project(path: ':feature:savedrecipes')
+    implementation project(path: ':feature:customrecipe')
 
     // Core modules we want to be retained for entire Application lifecycle
     implementation project(path: ':core:data:impl')
