--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':feature:shoppinglist'
 include ':feature:recipesearch'
 include ':feature:recipedetail'
 include ':feature:savedrecipes'
+include ':feature:customrecipe'
