--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation project(path: ':core:model')
+    implementation project(path: ':core:common')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
