--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':feature:recipesearch'
 include ':feature:recipedetail'
 include ':feature:savedrecipes'
 include ':feature:customrecipe'
+include ':feature:ingredientsearch'
