escape quotes to make default value empty string instead of nothing (compile error)

--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -15,7 +15,7 @@ android {
             properties.load(project.rootProject.file("local.properties").newDataInputStream())
         }
 
-        buildConfigField "String", "spoonacularApiKey", properties.getProperty("spoonacular_api_key", "")
+        buildConfigField "String", "spoonacularApiKey", properties.getProperty("spoonacular_api_key", "\"\"")
     }
 
     buildTypes {
