--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -10,7 +10,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         buildConfigField "boolean", "useFakeDataSource", "false"
 
-        // Only read local properties in debug since we don't need it in other build variants
+        // TODO: Only read local.properties in debug since we don't need it in other build variants
         Properties properties = new Properties()
         if (project.rootProject.file("local.properties").canRead()) {
             properties.load(project.rootProject.file("local.properties").newDataInputStream())
