--- a/core/data/impl/build.gradle
+++ b/core/data/impl/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    api project(path: ':core:data:api')
+    api project(path: ':core:domain')
     implementation project(path: ':core:model')
     implementation project(path: ':core:common')
     implementation project(path: ':core:network')
@@ -36,6 +36,10 @@ dependencies {
     implementation libs.kotlinx.serialization.json
     implementation libs.dagger
     kapt libs.dagger.compiler
+
+    // TODO: Needed for compositionLocalOf...consider refactoring, data layer shouldn't be aware of
+    //  UI components
+    implementation libs.androidx.compose.runtime
 
     testImplementation libs.junit4
 }
