--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -25,8 +25,6 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':core:data:api')
-    implementation project(path: ':core:network')
     implementation project(path: ':core:model')
     implementation project(path: ':core:common')
 
@@ -34,6 +32,10 @@ dependencies {
     implementation libs.androidx.appcompat
     implementation libs.dagger
     kapt libs.dagger.compiler
+
+    // TODO: Needed for compositionLocalOf...consider refactoring, domain layer shouldn't be aware of
+    //  UI components
+    implementation libs.androidx.compose.runtime
     
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
