--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,9 @@ dependencies {
     implementation project(path: ':feature:ingredientsearch')
 
     // Core modules we want to be retained for entire Application lifecycle
-    implementation project(path: ':core:data:impl')
+    implementation project(path: ':core:data')
     implementation project(path: ':core:common')
     implementation project(path: ':core:ui')
-    implementation project(path: ':core:domain')
 
     // On implementation vs. api:
     // If you are a library maintainer you should use 'api' for every dependency which is needed for
